:recycle: A bit of refactor here and there
Describing the major changes

AbstractMFXFlowlessListView:
:recycle: Use ColorUtils.toCss() method rather than rgb()

AnimationUtils:
:recycle: The runWhile methods should use JavaFX properties rather than booleans

ExecutionUtils:
:sparkles: Added two new methods

MFXCheckboxSkin:
:recycle: Use the new waitForSkin method of the NodeUtils class

MFXComboBox:
:recycle: Use the new waitForScene method of the NodeUtils class

MFXComboBoxSkin:
:recycle: Use the new waitForSkin method of the NodeUtils class

MFXFilterComboBoxSkin:
:recycle: Use the new waitForSkin method of the NodeUtils class
:recycle: Use the new runWhile method of the AnimationUtils.PauseBuilder class

MFXLegacyComboBox:
:recycle: Use the new waitForScene method of the NodeUtils class

MFXListView:
:recycle: Use ColorUtils.toCss() method rather than rgb()

MFXProgressBarSkin:
:recycle: Use the new waitForScene method of the NodeUtils class

MFXProgressSpinnerSkin:
:recycle: Use the new waitForScene method of the NodeUtils class

MFXRadioButtonSkin:
:recycle: Use the new waitForSkin method of the NodeUtils class

MFXScrollPane:
:recycle: Use ColorUtils.toCss() method rather than rgb()

MFXSlider:
:recycle: Improved default popup supplier
:sparkles: Added a new property to disable the keyboard
:bug: Fixed a bug which caused a wrong layout if both min and max were negatives

MFXStepperSkin:
:recycle: Use the new waitForScene method of the NodeUtils class

MFXTableViewSkin:
:recycle: Use the new waitForScene method of the NodeUtils class

MFXTextField:
:recycle: Use the new waitForSkin method of the NodeUtils class

MFXToggleButtonSkin:
:recycle: Use the new waitForSkin method of the NodeUtils class

MFXTreeView:
:recycle: Use the new waitForSkin method of the NodeUtils class

NodeUtils:
:recycle: Refactored both waitForSkin and waitForScene methods, added a new boolean parameter

ToggleNodeShape:
:fire: Removed as not necessary anymore

:memo: Added/updated docu